istio/istio-grafana-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-grafana
  namespace: istio-system
spec:
  rules:
  - host: istio-grafana.5ik8s.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
